SFDC DevOps Test/src/objects/Test_Iterations__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a specific time a test script is modified for testing.</description>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <description>Execution date of test iteration</description>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <description>Execution type of test iteration</description>
        <label>Execution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Result__c</fullName>
        <description>Result of test iteration</description>
        <label>Overall Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <description>Test script for test iteration</description>
        <label>Test Script</label>
        <referenceTo>Test_Script__c</referenceTo>
        <relationshipLabel>Test Iterations</relationshipLabel>
        <relationshipName>Test_Execution_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Iteration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TestIterations-{0000000}</displayFormat>
        <label>Test Iteration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Iterations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>